# hello-tf

./: Cargo.toml  README.md  build.rs
hello/: pubspec.yaml
hello/android/: build.gradle
hello/android/gradle/wrapper/: gradle-wrapper.properties
hello/lib/: main.dart
proto/: infer.proto
pys/: gen_model.py  infer_client.py  infer_local.py  infer_pb2.py  infer_pb2_grpc.py  process_server.py  requset
src/: infer.rs
