[package]
name = "hello-tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# tensorflow = "0.19.1"
# tokio = {version = "1.12.0", features = ["full"]}
# tonic = "0.8.3"
# prost = "0.11.6"
# async-trait = "0.1"

# axum = {git = "https://github.com/tokio-rs/axum", features=["multipart"]}
# tracing = "0.1"
# tracing-subscriber = "0.3"

# serde = {version="1.0", features=["derive"]}
# serde_json = "1.0"

# tower-http = {version="0.3.5", features=["full"]}

# [build-dependencies]
# tonic-build = "0.8"

[dependencies]
async-trait = "0.1"
prost = "0.11"
tensorflow = "0.19"
tokio = {version = "1.12", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.8"

axum = {git = "https://github.com/tokio-rs/axum", features=["multipart"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["full" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-web = "0.5"
http = "0.2"
http-body = "0.4.5"
hyper = {version = "0.14", features = ["full"]}
reqwest = "0.11.6"
futures = "0.3.17"
tower = "0.4.10"
bytes = "1.1.0"
warp = "0.3.1"

[build-dependencies]
tonic-build = "0.8"